# illuaminate

./: .gitignore  .gitmodules  .merlin  .ocamlformat  .pre-commit-config.yaml  CHANGES.md  DEVEL.md  LICENSE  README.md  dune  dune-project  dune-workspace.release  esy.json  flake.nix  illuaminate.opam  illuaminate.opam.template  opam  watch.sh
doc/: dune  esy.unix.json
src/doc_emit/: dune  flat_index.ml  flat_index.mli  helpers.ml  html_assets.ml  html_basic.ml  html_embedded_scripts.js  html_embedded_styles.css  html_highlight.ml  html_highlight.mli  html_loader.ml  html_loader.mli  html_main.re  html_main.rei  html_md.ml  html_md.mli  html_options.ml  html_type.re  html_type.rei  html_value.re  illuaminateDocEmit.ml  illuaminateDocEmit.mli  summary.ml  summary.mli
src/github/: dune  illuaminateGithub.ml  illuaminateGithub.mli  network.mli
src/github/default/: dune  network.ml
src/github/unix/: dune  network.ml
src/html/jsx/: dune  jsx.ml  jsx.mli
src/lint/: .merline  driver.ml  driver.mli  dune  illuaminateLint.ml  illuaminateLint.mli  lex_string_escape.mll  lex_string_format.mll  lint_arg_arg.ml  lint_arg_arg.mli  lint_bracket_spacing.ml  lint_bracket_spacing.mli  lint_deprecated.ml  lint_deprecated.mli  lint_detached_comment.ml  lint_detached_comment.mli  lint_doc_extract.ml  lint_doc_extract.mli  lint_doc_parse.ml  lint_doc_parse.mli  lint_doc_versions.ml  lint_empty_block.ml  lint_empty_block.mli  lint_for_num.ml  lint_for_num.mli  lint_invalid_break.ml  lint_invalid_break.mli  lint_legacy_markdown.ml  lint_legacy_markdown.mli  lint_malformed_example.ml  lint_malformed_example.mli  lint_malformed_number.ml  lint_malformed_number.mli  lint_method_name.ml  lint_method_name.mli  lint_misplaced_dots.ml  lint_misplaced_dots.mli  lint_parens.ml  lint_parens.mli  lint_pcall_eta.ml  (+47 more)
src/lsp/: diagnostics.ml  diagnostics.mli  dune  illuaminate_lsp.ml  illuaminate_lsp.mli  illuaminate_lsp_core.mli  lint.ml  locate.ml  lsp_convert.ml  on_init.ml  on_notification.ml  on_notification.mli  on_request.ml  on_request.mli  store.ml  store.mli  ugly_hacks.ml
src/parser/: dune  error.ml  error.mli  grammar.mly  illuaminateParser.ml  illuaminateParser.mli  lexer.mll  messages.txt  parse_errors.mlyl  token.ml  token.mli
src/parser_md/: dune  illuaminateParserMd.ml  illuaminateParserMd.mli  lexer.mll
src/semantics/: control.ml  control.mli  data.ml  data.mli  doc_abstract_syntax.ml  doc_abstract_syntax.mli  doc_comment.ml  doc_comment.mli  doc_extract.ml  doc_extract.mli  doc_extract_config.ml  doc_extract_config.mli  doc_extract_helpers.ml  doc_extract_helpers.mli  doc_extract_resolve.ml  doc_extract_resolve.mli  doc_extract_unresolved.ml  doc_lexer.mll  doc_parser.ml  doc_parser.mli  doc_syntax.ml  doc_syntax.mli  dune  global.ml  global.mli  illuaminateSemantics.ml  illuaminateSemantics.mli  lua_reference.ml  lua_reference.mli  module.ml  module_resolve.ml  module_resolve.mli  namespace.ml  omd_transform.ml  pure.ml  pure.mli  reference.ml  resolve.ml  resolve.mli  string_escape.mll  (+11 more)
src/tools/: dune  esy.ml  genTree.ml  genTree.mli  quote.ml  subst_bisect.ml  syntax.mli
src/web/: dune  index.html  main.css  main.ml  main.mli  template.re
test/: config.ml  config_format.ml  data.ml  data.mli  diff.ml  diff.mli  doc_emit.ml  doc_emit.mli  doc_emit_index.ml  doc_emit_summary.ml  doc_extract.ml  doc_parser.ml  doc_sexp.ml  dune  helpers.ml  import.ml  leak.ml  leak.mli  leak_trace.ml.cppo  leak_trace.mli  leak_trace_gc.ml  lexer.ml  lint.ml  lsp_code_action.ml  lsp_declaration.ml  lsp_definition.ml  lsp_diagnostic.ml  lsp_highlight.ml  lsp_leak.ml  lsp_locate.ml  lsp_reference.ml  lsp_rename.ml  lsp_test.ml  lsp_test.mli  lsp_workspace_symbol.ml  lsp_workspace_symbol.mli  md_test_gen.ml  md_test_runner.ml  minify.ml  parser.ml  (+6 more)
test/data/config/: both_fields.out  both_fields.sexp  default.out  duplicate.out  duplicate.sexp  empty.out  single_field.out  single_field.sexp  unknown_field.out  unknown_field.sexp
test/data/config-cats/: basic.sexp  default.out
test/data/doc-emit/: alias.html  alias.json  alias.lua  alias.sexp  basic.html  basic.json  basic.lua  basic.sexp  codeblock.html  codeblock.json  codeblock.lua  codeblock.sexp  deprecated.html  deprecated.json  deprecated.lua  deprecated.sexp  env.html  env.json  env.lua  env.sexp  export.html  export.json  export.lua  export.sexp  fields.html  fields.json  fields.lua  fields.sexp  local.html  local.json  local.lua  local.sexp  markdown_features.html  markdown_features.json  markdown_features.lua  markdown_features.sexp  references.html  references.json  references.lua  references.sexp  (+20 more)
test/data/doc-extract/: basic.html  basic.json  env.html  env.json  env.out  local.html  local.json  local.out
test/data/doc-parse/: deprecate.lua  deprecate.out  formatting.lua  formatting.out  function.lua  function.out  module.lua  module.out  no-trailing.md  no-trailing.out  separator.lua  separator.out  source.lua  source.out  versions.lua  versions.out
test/data/lexer/: numbers.lua  numbers.out  strings.lua  (+1 more)
test/expect/: exts.html  exts.latex  exts.locs  exts.trip.md
test/illuaminate_minify/: dune  main.ml  rules.inc  t_minify.md
test/lint/: dune  fragment_linter.ml  fragment_linter.mli  main.ml  rules.inc  t_bracket_spacing.md  t_deprecated.md  t_detached_comment.md  t_doc_extract.md  t_doc_parser.md  t_doc_versions.md  t_empty_block.md  t_for_num.md  t_invalid_break.md  t_legacy_markdown.md  t_malformed_example.md  t_malformed_number.md  t_method_name.md  t_misplaced_dots.md  t_parens.md  t_pcall_eta.md  t_pointless_discard.md  t_pointless_semicolon.md  t_set_global.md  t_set_loop.md  t_spacing.md  t_string_escape.md  t_string_index.md  t_string_len.md  t_string_lib.md  t_string_quote.md  t_table_separator.md  t_trailing_table.md  t_unbalanced_assign.md  t_undocumented.md  t_unknown_global.md  t_unreachable.md  t_unresolved_member.md  t_unresolved_reference.md  t_unused.md  (+2 more)
test/markdown/: dune  t_cmarkit_extensions.md  test.ml
test/parser/: dune  mk_messages.ml  t_parse_errors.md  t_parse_exhaustive.md  test.ml
(+255 files in other folders)
