(rule
 (targets esy.unix.json)
 (alias opam)
 (deps
  (:opam ../illuaminate.opam)
  (:exe ../src/tools/esy.exe))
 (mode promote)
 (action
  (with-stdout-to
   %{targets}
   (run %{exe} -o unix %{opam}))))

(rule
 (targets esy.windows.json)
 (alias opam)
 (deps
  (:opam ../illuaminate.opam)
  (:exe ../src/tools/esy.exe))
 (mode promote)
 (action
  (with-stdout-to
   %{targets}
   (run %{exe} -o windows %{opam}))))
