(library
 (name diff)
 (libraries fmt)
 (modules diff))

(test
 (name test)
 (libraries
  omnomnom
  omnomnom.golden
  omnomnom.alcotest
  containers
  illuaminate.core
  illuaminate.config
  illuaminate.data
  illuaminate.parser
  illuaminate.parser_md
  illuaminate.lint
  illuaminate.minify
  cmarkit
  fpath
  illuaminate.semantics
  illuaminate.pattern
  illuaminate.doc_emit
  illuaminateConfigFormat
  logs
  cmdliner
  yojson
  alcotest
  fmt
  qcheck-core
  html
  unix)
 (deps
  (source_tree data))
 (preprocess
  (pps ppx_deriving.std))
 (modules
  :standard
  \
  leak_trace_gc
  config_format
  data
  doc_emit_summary
  span
  diff)
 (action
  (run %{test} --base-dir "../")))

(tests
 (names config_format data doc_emit_summary span)
 (modules config_format data doc_emit_summary span)
 (libraries
  ; External libs
  fpath
  cmarkit
  ; To test
  illuaminate.core
  illuaminate.data
  illuaminate.semantics
  illuaminate.doc_emit
  illuaminateConfigFormat
  ; Test support
  alcotest
  qcheck-core
  qcheck-alcotest))

(data_only_dirs data)

(rule
 (deps
  (:main leak_trace.ml.cppo)
  leak_trace_gc.ml)
 (targets leak_trace.ml)
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{main} -o %{targets})))
