(library
 (name diff)
 (libraries fmt)
 (modules diff))

(library
 (name md_test_runner)
 (libraries containers)
 (modules md_test_runner))

(executable
 (name md_test_gen)
 (modules md_test_gen))

(test
 (name test)
 (libraries
  omnomnom
  omnomnom.golden
  omnomnom.alcotest
  containers
  illuaminate
  illuaminate.core
  illuaminate.config
  illuaminate.data
  illuaminate.parser
  illuaminate.parser_md
  illuaminate.lint
  cmarkit
  fpath
  illuaminate.semantics
  illuaminate.pattern
  illuaminate.doc_emit
  illuaminateConfigFormat
  logs
  cmdliner
  yojson
  alcotest
  fmt
  qcheck-core
  unix)
 (deps
  (source_tree data))
 (preprocess
  (pps ppx_deriving.std))
 (modules
  :standard
  \
  config_format
  data
  diff
  doc_emit_summary
  leak_trace_gc
  md_test_runner
  md_test_gen)
 (action
  (run %{test} --base-dir "../")))

(tests
 (names config_format data doc_emit_summary)
 (modules config_format data doc_emit_summary)
 (libraries
  ; External libs
  fpath
  cmarkit
  ; To test
  illuaminate
  illuaminate.core
  illuaminate.data
  illuaminate.semantics
  illuaminate.doc_emit
  illuaminateConfigFormat
  ; Test support
  alcotest
  qcheck-core
  qcheck-alcotest))

(data_only_dirs data)

(rule
 (deps
  (:main leak_trace.ml.cppo)
  leak_trace_gc.ml)
 (targets leak_trace.ml)
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{main} -o %{targets})))
