(library
 (name illuaminateDocEmit)
 (public_name illuaminate.doc_emit)
 (synopsis "Emits documentation to HTML")
 (libraries containers illuaminate.html illuaminate.core
   illuaminate.semantics illuaminate.parser fpath omd yojson)
 (preprocess
  (pps jsx)))

(rule
 (target html_embedded_styles.ml)
 (deps html_embedded_styles.css)
 (action
  (with-stdout-to
   %{target}
   (run ../tools/quote.exe %{deps}))))
