(library
 (name illuaminateDocEmit)
 (public_name illuaminate.doc_emit)
 (synopsis "Emits documentation to HTML")
 (libraries containers illuaminate.html illuaminate.core illuaminate.data
   illuaminate.semantics illuaminate.parser fpath omd yojson)
 (preprocess
  (pps jsx)))

(rule
 (target html_embedded_styles.ml)
 (deps html_embedded_styles.css)
 (action
  (with-stdout-to
   %{target}
   (run ../tools/quote.exe %{deps}))))

(rule
 (target html_embedded_scripts.ml)
 (deps html_embedded_scripts.js)
 (action
  (with-stdout-to
   %{target}
   (run ../tools/quote.exe %{deps}))))
