(library
 (name illuaminateDocEmit)
 (public_name illuaminate.doc_emit)
 (synopsis "Emits documentation to HTML")
 (libraries
  cmarkit
  containers
  fpath
  illuaminate
  illuaminate.core
  illuaminate.data
  illuaminate.html
  illuaminate.parser
  illuaminate.semantics
  markup
  unix
  uri
  yojson)
 (preprocess
  (pps jsx))
 (instrumentation
  (backend bisect_ppx)))

(rule
 (target html_embedded_styles.ml)
 (deps html_embedded_styles.css)
 (action
  (with-stdout-to
   %{target}
   (run ../tools/quote.exe %{deps}))))

(rule
 (target html_embedded_scripts.ml)
 (deps ../../vendor/fuse.min.js html_embedded_scripts.js)
 (action
  (with-stdout-to
   %{target}
   (run ../tools/quote.exe %{deps}))))
