(library
 (name illuaminateLint)
 (public_name illuaminate.lint)
 (synopsis "Basic linting for Illuaminate.")
 (libraries
  containers
  illuaminate.core
  illuaminate.config
  illuaminate.data
  illuaminate.semantics
  illuaminate.parser
  fmt
  ppx_deriving.runtime
  omd)
 (instrumentation
  (backend bisect_ppx)))
