(library
 (name illuaminateLint)
 (public_name illuaminate.lint)
 (synopsis "Basic linting for Illuaminate.")
 (libraries
  cmarkit
  containers
  fmt
  illuaminate
  illuaminate.config
  illuaminate.core
  illuaminate.data
  illuaminate.parser
  illuaminate.semantics
  ppx_deriving.runtime)
 (instrumentation
  (backend bisect_ppx)))
