(library
 (name illuaminateParser)
 (public_name illuaminate.parser)
 (synopsis "Provides an interface for parsing Lua code")
 (libraries menhirLib illuaminate.core)
 (preprocess
  (pps ppx_deriving.std)))

(menhir
 (modules grammar)
 (flags
  ("--table" "--explain")))

(rule
 (targets "messages.ml")
 (deps "grammar.mly" "messages.txt")
 (action
  (with-stdout-to
   "messages.ml"
   (run menhir "--compile-errors" "messages.txt" "grammar.mly"))))

(ocamllex
 (modules lexer))
