(library
 (name illuaminateParser)
 (public_name illuaminate.parser)
 (synopsis "Provides an interface for parsing Lua code")
 (libraries lrgrep.runtime menhirLib illuaminate.core fmt)
 (instrumentation
  (backend bisect_ppx)))

(menhir
 (modules grammar)
 (flags :standard --inspection --table --cmly))

(rule
 (target parse_errors.ml)
 (action
  (run
   %{bin:lrgrep}
   %{dep:parse_errors.mlyl}
   -g
   %{dep:grammar.cmly}
   -o
   %{target})))

(rule
 (target "messages.ml")
 (deps
  (:grammar grammar.mly)
  (:messages messages.txt))
 (action
  (with-stdout-to
   %{target}
   (run menhir --compile-errors %{messages} %{grammar}))))

;; Check message file is complete, and do this as part of tests.

(rule
 (target messages_complete.txt)
 (deps grammar.mly)
 (action
  (with-stdout-to
   %{target}
   (run menhir --list-errors %{deps}))))

(rule
 (alias check-messages)
 (deps
  (:grammar grammar.mly)
  (:complete messages_complete.txt)
  (:main messages.txt))
 (action
  (run
   menhir
   --compare-errors
   %{complete}
   --compare-errors
   %{main}
   %{grammar})))

(alias
 (name runtest)
 (deps
  (alias check-messages)))

(ocamllex
 (modules lexer))
