;; Various utility programs for generating code. Not actually used as
;; part of illuaminate.

(executable
 (name genTree)
 (libraries ppxlib ppxlib.ast base ocaml-migrate-parsetree)
 (modules genTree syntax)
 (preprocess
  (pps ppxlib.metaquot)))

(executable
 (name esy)
 (modules esy)
 (libraries opam-file-format yojson))

(executable
  (name subst_bisect)
  (modules subst_bisect sexp_lexer)
  (libraries illuaminate.core illuaminate.pattern logs containers fpath))

(rule
 (targets syntax.ml)
 (deps ../core/syntax.ml)
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "open Ppxlib\nlet loc = Location.none\nlet tree = [%str ")
    (cat %{deps})
    (echo "]")))))

(ocamllex
  (modules sexp_lexer))

(rule (copy ../config/lexer.mll sexp_lexer.mll))
