;; Various utility programs for generating code. Not actually used as
;; part of illuaminate.

(executable
 (name genTree)
 (libraries ppxlib ppxlib.ast base ocaml-migrate-parsetree)
 (modules genTree syntax)
 (preprocess
  (pps ppxlib.metaquot)))

(executable
 (name esy)
 (modules esy)
 (libraries containers opam-file-format yojson))

(executable
 (name quote)
 (modules quote)
 (libraries containers))

(rule
 (targets syntax.ml)
 (deps ../core/syntax.ml)
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "open Ppxlib\nlet loc = Location.none\nlet tree = [%str ")
    (cat %{deps})
    (echo "]")))))
