(executable
 (name main)
 (libraries js_of_ocaml containers fpath illuaminate.core illuaminate.parser
   illuaminate.semantics illuaminate.lint illuaminate.config illuaminate.html
   illuaminate.data)
 (modes js)
 ;; (flags "--pretty" "--no-inline" "--debug-info" "--source-map"))
 (preprocess
  (pps js_of_ocaml-ppx jsx)))

(install
 (section etc)
 (package illuaminate)
 (files
  (index.html as web/index.html)
  (main.css as web/main.css)
  (main.bc.js as web/main.js)))
