(executable
 (name main)
 (libraries
  illuaminate
  illuaminate.core
  illuaminate.parser
  illuaminate.minify
  md_test_runner
  ppx_deriving.runtime))

(rule
 (deps
  (:markdown
   (glob_files t_*.md)))
 (action
  (with-stdout-to
   rules.new.inc
   (with-stdin-from
    %{dep:rules.inc}
    (run %{dep:../md_test_gen.exe} --extra %{markdown})))))

(rule
 (alias rules)
 (action
  (diff rules.inc rules.new.inc)))

(alias
 (name runtest)
 (deps
  (alias rules)))

(include rules.inc)
